--- a/2.Jupyter Notebook 笔记.md
+++ b/2.Jupyter Notebook 笔记.md
@@ -106,3 +106,7 @@ jupyter notebook
 ## 感想
 
 经过了不算简单的环境配置和并不习惯的快捷键使用，感觉 jupyter notebook 的受众并没有那么广，也没有特别刚需和实用。。。
+
+## 其他
+
+又发现了更方便的使用方法，直接在 vscode 打开 .ipynb 文件，选择 conda 环境之后，不需要再安装 jupyter notebook 组件等，可以直接在选定的环境下运行代码，并且支持上述 jupyter notebook 中的快捷键。（我觉得这个好用多了。。。）
