--- a/1.Anaconda 笔记.md
+++ b/1.Anaconda 笔记.md
@@ -228,6 +228,8 @@ source activate env_name      # 激活新建的虚拟环境
 pip install -r requirements.txt
 ```
 
+
+
 ## 环境配置经验
 
 多次环境配置之后总结的经验
@@ -264,3 +266,10 @@ pytorch 之前版本：
 [Previous PyTorch Versions | PyTorch](https://pytorch.org/get-started/previous-versions/)
 
 cudatoolkit可以直接在conda里面下载，torch的安装命令里面有指定cuda的版本
+
+>  CUDA toolkit 不用专门下载（就是说在英伟达官网下载），直接在anaconda环境中install一个合适版本的 cuda toolkit 就行。但是驱动还是需要正常安装的。
+
+
+
+3090 的卡不支持 cuda-toolkit 10.2，至少 11.1
+
