--- a/3.git命令笔记.md
+++ b/3.git命令笔记.md
@@ -14,7 +14,7 @@ git init
 
 ```shell
 git config --global user.name "cyz020403"
-git config --global user.email "cyz020403@outlook.com"
+git config --global user.email "cyz020403@gmail.com"
 ```
 
 ### Set SSH key
